[tool.poetry]
name = "arkitekt"
version = "0.7.1"
description = "client for the arkitekt platform"
authors = ["jhnnsrs <jhnnsrs@gmail.com>"]
license = "MIT"
packages = [{ include = "arkitekt" }]

[tool.poetry.dependencies]
python = "^3.8"
herre = ">=0.4.2"
fakts = ">=0.4.0"
rekuest = { version = ">=0.2.27", optional = true }
mikro = { version = ">=0.3.95", optional = true }
mikro-next = { version = ">=0.1.6", python = "^3.10", optional = true }
unlok = { version = ">=0.1.18", optional = true }
fluss = { version = ">=0.1.61", optional = true }
reaktion = { version = ">=0.1.48", python = "^3.8", optional = true }
omero-ark = { version = ">=0.0.3", python = "^3.8", optional = true }
kluster = { version = ">=0.0.3", python = "^3.9", optional = true }

rich-click = { version = ">=1.6.1", optional = true }
watchfiles = { version = ">=0.18.1", optional = true }
turms = { version = ">=0.5.0", python = "^3.9", optional = true }
semver = { version = ">=3.0.1", optional = true }
dokker = ">=0.1.21"


[tool.poetry.extras]
cli = ["rich-click", "watchfiles", "turms", "semver", "rekuest"]
reaktion = ["reaktion"]
rekuest = ["rekuest"]
mikro = ["mikro"]
mikro-next = ["mikro-next"]
unlok = ["unlok"]
fluss = ["fluss"]
all = [
    "rich-click",
    "watchfiles",
    "turms",
    "semver",
    "reaktion",
    "rekuest",
    "mikro",
    "unlok",
    "fluss",
]
next = ["mikro-next"]
omero = ["omero-ark"]
kluster = ["kluster"]

[tool.mypy]
exclude = ["venv/"]
ignore_missing_imports = true


[tool.ruff]
extend-select = ["ANN", "D1"]
extend-ignore = ["ANN101", "ANN002", "ANN003"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

[tool.poetry.group.dev.dependencies]
testcontainers = "3.7.0"
autoflake = "^1.7.7"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
aiohttp = "^3.8.3"
websockets = "^10.4"
black = "^23.1.0"
pytest-cov = "^4.0.0"
pytest-aiohttp = "^1.0.4"
ruff = "^0.0.254"
mypy = "^1.0.1"
types-pyyaml = "^6.0.12.12"
pyqt5-stubs = "^5.15.6.0"


[tool.poetry.scripts]
arkitekt = "arkitekt.cli.main:cli"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
qt_api = "pyqt5"
markers = [
    "integration: marks tests that require a running server",
    "qt: marks tests that require a running qt application",
    "cli: marks tests that require a running cli",
]


[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["arkitekt"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"
